Mon Oct 09 15:27:59 BST 2000 Olly Betts

	* Implemented OmEnquire::get_docs() - currently just fetches them
	  sequentially.

	* Removed unused max_weight element from OmQueryInternal

Mon Oct  9 14:39:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Part-implemented add_document and delete_document methods in
	  quartz - document data is now added, stored and deleted.  Terms are
	  not dealt with, though.

Mon Oct 09 14:22:04 BST 2000 Olly Betts

	* Added SubMatch::start_match() so we can set remote matchers going
	  in parallel.

	* Added PostList::get_collapse_key() so we don't need to refetch keys
	  for hits from an MSetPostList.

Mon Oct 09 13:54:13 BST 2000 Olly Betts

	* IRWeight::clone() -> IRWeight::create(const OmSettings & opts)

Fri Oct  6 18:43:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added QuartzWritableDatabase, which inherits from QuartzDatabase.
	  We now open one of these instead of passing readonly=true.

Fri Oct  6 17:40:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added indexer headers to <om/om.h>

Fri Oct  6 17:19:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented the new OmIndexer::get_output()

Fri Oct  6 13:15:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* QuartzBufferedTable::get_or_make_tag() now never returns a null
	  pointer, as advertised.  Fixes broken test.

Fri Oct  6 12:02:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add autoptr cleanup item to todo.

Thu Oct  5 18:28:48 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Renamed OmIndexer::get_output to get_raw_output and added new
	  get_output returning an OmDocumentContents (not yet implemented)

	* Removed omindexer.h~, which managed to be added to CVS

Thu Oct  5 18:24:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test of QuartzBufferedTable (fails).
